--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.ko
 *.obj
 *.elf
+build/
 
 # Linker output
 *.ilk
@@ -35,6 +36,7 @@
 *.i*86
 *.x86_64
 *.hex
+bin/
 
 # Debug files
 *.dSYM/
@@ -50,3 +52,11 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+#logs
+*.log
+
+#eclipse junk
+.settings/
+.project
+.cproject
