* added updated debug config * added layout file for debug view

--- a/lpc_1114_302_frame_c.cbp
+++ b/lpc_1114_302_frame_c.cbp
@@ -132,10 +132,10 @@
 			<code_completion />
 			<debugger>
 				<remote_debugging target="debug">
-					<options conn_type="2" serial_port="/dev/ttyBmpGdb" serial_baud="115200" additional_cmds="monitor swdp_scan&#x0A;attach 1&#x0A;set mem inaccessible-by-default off&#x0A;load bin/debug/lpc_1114.elf&#x0A;set {int}0x40048000 = 2&#x0A;compare-sections&#x0A;start" extended_remote="1" />
+					<options conn_type="2" serial_port="/dev/ttyBmpGdb" serial_baud="115200" additional_cmds="monitor swdp_scan&#x0A;attach 1&#x0A;set mem inaccessible-by-default off&#x0A;load bin/debug/lpc_1114_302_frame_C.elf&#x0A;set {int}0x40048000 = 2&#x0A;compare-sections" additional_cmds_before="file bin/debug/lpc_1114_302_frame_C.elf" extended_remote="1" />
 				</remote_debugging>
 				<remote_debugging target="release">
-					<options conn_type="2" serial_port="/dev/ttyBmpGdb" serial_baud="115200" extended_remote="1" />
+					<options conn_type="2" serial_port="/dev/ttyBmpGdb" serial_baud="115200" additional_cmds="monitor swdp_scan&#x0A;attach 1&#x0A;set mem inaccessible-by-default off&#x0A;load bin/release/lpc_1114_302_frame_C.elf&#x0A;set {int}0x40048000 = 2&#x0A;compare-sections" additional_cmds_before="file bin/release/lpc_1114_302_frame_C.elf" extended_remote="1" />
 				</remote_debugging>
 			</debugger>
 		</Extensions>
