--- a/lpc_1114_302_frame_c.cbp
+++ b/lpc_1114_302_frame_c.cbp
@@ -6,6 +6,14 @@
 		<Option makefile_is_custom="1" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
+		<MakeCommands>
+			<Build command="$make -f $makefile $target" />
+			<CompileFile command="$make -f $makefile $file" />
+			<Clean command="$make -f $makefile clean" />
+			<DistClean command="$make -f $makefile distclean$target" />
+			<AskRebuildNeeded command="$make -q -f $makefile $target" />
+			<SilentBuild command="$make -f $makefile $target &gt; $(CMD_NULL)" />
+		</MakeCommands>
 		<Build>
 			<Target title="debug">
 				<Option output="bin/debug/lpc_1114_302_frame_c" prefix_auto="1" extension_auto="1" />
@@ -15,6 +23,14 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<MakeCommands>
+					<Build command="$make -f $makefile $target" />
+					<CompileFile command="$make -f $makefile $file" />
+					<Clean command="$make -f $makefile clean" />
+					<DistClean command="$make -f $makefile distclean$target" />
+					<AskRebuildNeeded command="$make -q -f $makefile $target" />
+					<SilentBuild command="$make -f $makefile $target &gt; $(CMD_NULL)" />
+				</MakeCommands>
 			</Target>
 			<Target title="release">
 				<Option output="bin/release/lpc_1114_302_frame_c" prefix_auto="1" extension_auto="1" />
@@ -27,6 +43,14 @@
 				<Linker>
 					<Add option="-s" />
 				</Linker>
+				<MakeCommands>
+					<Build command="$make -f $makefile $target" />
+					<CompileFile command="$make -f $makefile $file" />
+					<Clean command="$make -f $makefile clean" />
+					<DistClean command="$make -f $makefile distclean$target" />
+					<AskRebuildNeeded command="$make -q -f $makefile $target" />
+					<SilentBuild command="$make -f $makefile $target &gt; $(CMD_NULL)" />
+				</MakeCommands>
 			</Target>
 		</Build>
 		<Compiler>
@@ -35,6 +59,9 @@
 		<Unit filename="LICENSE" />
 		<Unit filename="Makefile" />
 		<Unit filename="README.md" />
+		<Unit filename="inc/board.h" />
+		<Unit filename="inc/board_init.h" />
+		<Unit filename="inc/print.h" />
 		<Unit filename="lpc_chip_11cxx/inc/NXP/crp.h" />
 		<Unit filename="lpc_chip_11cxx/inc/adc_11xx.h" />
 		<Unit filename="lpc_chip_11cxx/inc/ccand_11xx.h" />
@@ -116,6 +143,9 @@
 		<Unit filename="lpc_chip_11cxx/src/wwdt_11xx.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="src/board_init.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="src/cr_startup_lpc11xx.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -125,17 +155,25 @@
 		<Unit filename="src/main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="src/print.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="src/sysinit.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
-			<code_completion />
+			<code_completion>
+				<search_path add="lpc_chip_11cxx/src" />
+				<search_path add="lpc_chip_11cxx/inc" />
+				<search_path add="src" />
+				<search_path add="inc" />
+			</code_completion>
 			<debugger>
-				<remote_debugging target="debug">
-					<options conn_type="2" serial_port="/dev/ttyBmpGdb" serial_baud="115200" additional_cmds="monitor swdp_scan&#x0A;attach 1&#x0A;set mem inaccessible-by-default off&#x0A;load bin/debug/lpc_1114_302_frame_C.elf&#x0A;set {int}0x40048000 = 2&#x0A;compare-sections" additional_cmds_before="file bin/debug/lpc_1114_302_frame_C.elf" extended_remote="1" />
-				</remote_debugging>
 				<remote_debugging target="release">
 					<options conn_type="2" serial_port="/dev/ttyBmpGdb" serial_baud="115200" additional_cmds="monitor swdp_scan&#x0A;attach 1&#x0A;set mem inaccessible-by-default off&#x0A;load bin/release/lpc_1114_302_frame_C.elf&#x0A;set {int}0x40048000 = 2&#x0A;compare-sections" additional_cmds_before="file bin/release/lpc_1114_302_frame_C.elf" extended_remote="1" />
+				</remote_debugging>
+				<remote_debugging target="debug">
+					<options conn_type="2" serial_port="/dev/ttyBmpGdb" serial_baud="115200" additional_cmds="monitor swdp_scan&#x0A;attach 1&#x0A;set mem inaccessible-by-default off&#x0A;load bin/debug/lpc_1114_302_frame_C.elf&#x0A;set {int}0x40048000 = 2&#x0A;compare-sections" additional_cmds_before="file bin/debug/lpc_1114_302_frame_C.elf" extended_remote="1" />
 				</remote_debugging>
 			</debugger>
 		</Extensions>
